[project]
name = "assistant-starter"
version = "0.1.0"
description = "Homework"
authors = [
    {name = "Vlad Ershov",email = "vlad.ershov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
